Change z-index of popover to 900 to prevent it from blocking autocomplete list

--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ body {
 
 .popover {
 	width: 30%;
+	z-index: 900;
 }
 
 #loc_input {
